feat(media): support editing alt text and copying relative media url
